--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "plum" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "default", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "plum", "dark", "dirt", "neon", "mint", "default", "sunrise"
 
 # Site Settings
 locale                   : "tr-TR"
